# Bachelor_ROS_project

./: .~lock.datahandle.txt#  .~lock.datahandle2.txt#  .~lock.datahandle3.txt#  data.csv  data.txt
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: dataHandle.pc  data_handle.pc  simulation.pc
devel/share/dataHandle/cmake/: dataHandleConfig.cmake
devel/share/data_handle/cmake/: data_handleConfig.cmake
devel/share/simulation/cmake/: simulationConfig.cmake
latex/: bibliografia.bib  dyplom-inz-utf8-dos_szablon.tex  mgr.cls
src/: my robot.gv
src/dataHandle/: CMakeLists.txt  data_cluster.py  data_scaner_handler.py  datahandle.launch  dataload.py  package.xml  robot_odometry.py
src/simulation/: CMakeLists.txt  package.xml
src/simulation/config/: myrobot.yaml
src/simulation/launch/: inz.launch
src/simulation/models/robot/: myrobot.gazebo  myrobot.xacro
src/simulation/worlds/: willow.world
